tests/small/bad/testMain04.lat
/*different return type - wrong*/
string main(){
    int x, y = 7;
    printInt(x);
    return 10;
    printInt(y);
    return 0 ;
}